third_party/move/move-compiler/tests/move_check/parser/address_too_long_decimal.exp
error[E01005]: invalid address
  ┌─ tests/move_check/parser/address_too_long_decimal.move:1:9
  │
1 │ address 1983934734707648152487488126467385770325287564619460388105773776639483347804723 {
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid address literal. The numeric value is too large. The maximum size is 32 bytes

